# PicoDecoderSoftware

./: CMakeLists.txt  DCCLocoDecoder_main.c  RP2040_DCC_Decoder.c  RP2040_DCC_Decoder.h
Workspace/DCCLocoDecoder/: DCCLocoDecoder.ino
